# riscy-os

./: .clang-format  .clang-tidy  .codespellignore  .codespellrc  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  shell.nix
.github/: CODEOWNERS
.github/workflows/: lint.yml
arch/: Kconfig  compile.sh  run.sh
arch/arm64/: CMakeLists.txt  Kconfig  config.cmake  entry.S  kernel.c
arch/arm64/ld/: qemu-virt64-kernel.ld
arch/riscv/: CMakeLists.txt  Kconfig  config.cmake  entry.S  kernel.c
arch/riscv/include/: print.h
arch/riscv/ld/: qemu-virt64-kernel.ld
cmake/: flags.cmake  lds.cmake  linters.cmake  prelude.cmake
docs/: arch.md  build_system.md  style.md
docs/riscv/: README
drivers/: CMakeLists.txt
drivers/syscon/: CMakeLists.txt  syscon.c
include/: .gitignore
include/drivers/: syscon.h
include/kernel/: attribute.h  early_output.h  endian.h  error.h  stdint.h  string.h
include/kernel/mem/: boot.h
include/kernel/of/: fdt.h  fdt_mem.h  syscon.h
kernel/: CMakeLists.txt  early_output.c  string.c  string.cpp
kernel/cmake/: checks.cmake  modules.cmake  root_dirs.cmake
kernel/mem/: CMakeLists.txt  boot.c
kernel/mem/boot/: CMakeLists.txt  free_list.c
kernel/of/: CMakeLists.txt  fdt.c  fdt_mem.c  syscon.c
libc/: CMakeLists.txt
libc/cmake/: modules.cmake
libc/include/: assert.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libc/src/: CMakeLists.txt  printf.c
libc/src/stdio/: CMakeLists.txt  printf.c
libc/src/stdlib/: CMakeLists.txt  abort.c
libc/src/string/: CMakeLists.txt  memcmp.c  memcpy.c  memmove.c  memset.c  memset_explicit.c  strcmp.c  string.c  strlen.c
misc/dts/: README  qemu-riscv64-virt.dts
scripts/: TESTING_ONLY_add_build_tools_to_path.sh  config_to_cmake.py  format.sh  run-aarch64.sh  run.sh
toolchain/: .gitignore  build.sh  clean.sh  flags.cmake  setup.cmake  test.sh
tools/: build.sh  clean.sh
